# Contourlet-transform-based-image-compression-code

./: 00278228contourlet-CP-RLC.rar  1638779Contourlet-fractal.rar  24387909contourletC.rar  Contourlet_demo_src.rar  Huffman.m  LICENSE  README.md  contourlet c.rar  信息安全教研室10级毕业设计指导教师安排.doc  开题.ppt  开题报告-郦乐宁(公式版).docx  开题报告-郦乐宁.doc  开题报告-郦乐宁1(公式版).docx  开题报告-郦乐宁2(公式版).docx  开题报告-郦乐宁如果还不过就让我也不好过.docx  开题报告-郦乐宁精简.docx  开题报告——100410316郦乐宁.ppt  开题报告修改.txt
libit-0.2.2/: AUTHORS  Makefile.am  Makefile.in  README  TODO  acinclude.m4  aclocal.m4  autogen.sh  configure  configure.in  libit-config  libit-config.in  libit.m4  libit.m4.in  libit.spec  libit.spec.in
libit-0.2.2/VC/: libit.ncb  libit.opt  libit.plg  libit_static.dsp  libit_static.plg
libit-0.2.2/VC/test_cplx/: test_cplx.dsp  test_cplx.plg
libit-0.2.2/VC/test_distance/: test_distance.dsp
libit-0.2.2/VC/test_fourier/: test_fourier.dsp  test_fourier.plg
libit-0.2.2/VC/test_io/: test_io.plg
libit-0.2.2/VC/test_mat/: test_mat.dsp
libit-0.2.2/VC/test_math/: test_math.dsp  test_math.plg
libit-0.2.2/VC/test_parser/: test_parser.plg
libit-0.2.2/VC/test_pnm/: test_pnm.dsp  test_pnm.plg
libit-0.2.2/VC/test_quantizer/: test_quantizer.dsp  test_quantizer.plg
libit-0.2.2/VC/test_source/: test_source.dsp
libit-0.2.2/VC/test_vec/: test_vec.plg
libit-0.2.2/VC/test_vlc/: test_vlc.dsp
libit-0.2.2/VC/test_wav/: test_wav.dsp
libit-0.2.2/VC/test_wavelet/: test_wavelet.dsp  test_wavelet.plg
libit-0.2.2/debian/: control  copyright  docs  libit-dev.dirs
libit-0.2.2/doc/: Makefile.am  Makefile.in  libit.ps  libit.sgml
libit-0.2.2/doc/html/: casting.html  channels.html  index.html  man.-mat-delete.html  man.-mat-height.html  man.-mat-new-alloc.html  man.-mat-new.html  man.-mat-set-col.html  man.-mat-set-height.html  man.-mat-set-width.html  man.-mat-width.html  man.-vec-clone.html  man.-vec-copy.html  man.-vec-delete.html  man.-vec-new-alloc.html  man.-vec-new-realloc.html  man.-vec-new.html  man.bmat-clone.html  man.bmat-copy-col.html  man.bmat-copy-row.html  man.bmat-copy.html  man.bmat-delete.html  man.bmat-diag.html  man.bmat-eq.html  man.bmat-eye.html  man.bmat-get-col.html  man.bmat-get-row.html  man.bmat-get-submatrix.html  man.bmat-height-max.html  man.bmat-height.html  man.bmat-init.html  man.bmat-new-alloc.html  man.bmat-new-diag.html  man.bmat-new-eye.html  man.bmat-new-ones.html  man.bmat-new-set.html  man.bmat-new-transpose.html  man.bmat-new-void.html  man.bmat-new-zeros.html  man.bmat-new.html  (+740 more)
libit-0.2.2/doc/man3/: Makefile  Makefile.in  Mat_set_width.3  Vec_new_realloc.3  bmat_copy.3  bmat_delete.3  bmat_diag.3  bmat_get_col.3  bmat_get_submatrix.3  bmat_height.3  bmat_height_max.3  bmat_init.3  bmat_new_alloc.3  bmat_new_set.3  bmat_new_transpose.3  bmat_new_void.3  bmat_new_zeros.3  bmat_set_between.3  bmat_set_height_max.3  bmat_swap_cols.3  bmat_swap_rows.3  bmat_width.3  bvec_1N.3  bvec_arithm.3  bvec_ber.3  bvec_copy.3  bvec_copy_from_cvec.3  bvec_copy_from_ivec.3  bvec_copy_from_vec.3  bvec_copy_mem.3  bvec_delete.3  bvec_distance_hamming.3  bvec_eq.3  bvec_find_first.3  bvec_find_sorted.3  bvec_geom.3  bvec_geq.3  bvec_get_subvector.3  bvec_ins.3  bvec_intersection.3  (+398 more)
libit-0.2.2/examples/test_ac/: .#test_ac.out.1.1  .#test_ac.out.1.2  Makefile
libit-0.2.2/examples/test_cc/: test_cc.out
libit-0.2.2/examples/test_cplx/: Makefile  test_cplx.c
libit-0.2.2/examples/test_distance/: Makefile
libit-0.2.2/examples/test_filter/: Makefile  test_filter.c  test_filter.out
libit-0.2.2/examples/test_fourier/: Makefile  test_fourier.c
libit-0.2.2/examples/test_linalg/: Makefile  test_linalg.c  test_linalg.out
libit-0.2.2/examples/test_mat/: Makefile  test.out  test_mat.c  test_mat.out
libit-0.2.2/examples/test_parser/: test_parser.out
libit-0.2.2/examples/test_pnm/: test_pnm.c
libit-0.2.2/examples/test_poly/: test_poly.out
libit-0.2.2/examples/test_quantizer/: Makefile  test_quantizer.c  test_quantizer.out
libit-0.2.2/examples/test_source/: test_source.c
libit-0.2.2/examples/test_vec/: test_vec.c  test_vec.out
libit-0.2.2/examples/test_vlc/: .#test_vlc.out.1.3  Makefile  octave-core  test_vlc.c
libit-0.2.2/examples/test_wav/: Makefile  test_wav.out
libit-0.2.2/examples/test_wavelet/: Makefile  test_wavelet.c
libit-0.2.2/include/: Makefile.in
libit-0.2.2/include/it/: Makefile.am  Makefile.in  arithmetic_codec.h  channel.h  convcode.h  cplx.h  distance.h  filter.h  fourier.h  hmmalgo.h  io.h  linalg.h  mat.h  math.h  parser.h  poly.h  quantizer.h  random.h  separable2D.h  source.h  source_fit.h  source_func.h  transform.h  transform2D.h  types.h  vec.h  vlc.h  wavelet.h  wavelet2D.h
libit-0.2.2/src/: Makefile.am  Makefile.in  distance.c  io.c  linalg.c  mat.c  math.c  parser.c  poly.c  source.c  vec.c  vlc.c  wavelet2D.c
libit-0.2.3/: INSTALL  Makefile.in  README  aclocal.m4  configure  configure.in  libit-config  libit.m4  libit.spec  mkinstalldirs
libit-0.2.3/VC/: libit.dsp  libit.dsw  libit.ncb
libit-0.2.3/VC/test_cc/: test_cc.dsp  test_cc.plg
libit-0.2.3/VC/test_distance/: test_distance.plg
libit-0.2.3/VC/test_io/: test_io.dsp
libit-0.2.3/VC/test_mat/: test_mat.plg
libit-0.2.3/VC/test_parser/: test_parser.dsp
libit-0.2.3/VC/test_source/: test_source.plg
libit-0.2.3/VC/test_vec/: test_vec.dsp
libit-0.2.3/VC/test_vlc/: test_vlc.plg
libit-0.2.3/VC/test_wav/: test_wav.plg
libit-0.2.3/debian/: README.Debian  changelog  libit-dev.files  rules
libit-0.2.3/doc/: Makefile.in  manpages.sgml
libit-0.2.3/doc/html/: basictypes.html  channel.html  convcodes.html  functions.html  implementation.html  index.html  information.html  inputoutput.html  man.-mat-delete.html  man.-mat-height.html  man.-mat-new-alloc.html  man.-mat-new.html  man.-mat-set-col.html  man.-mat-set-height.html  man.-mat-set-width.html  man.-mat-width.html  man.-vec-clone.html  man.-vec-copy.html  man.-vec-delete.html  man.-vec-new-alloc.html  man.-vec-new-realloc.html  (+689 more)
libit-0.2.3/examples/: Makefile
libit-0.2.3/include/: Makefile.in
libit-0.2.3/src/: Makefile.am  Makefile.in
(+650 files in other folders)
