##
## Process this file with automake to produce Makefile.in
##

lib_LTLIBRARIES = libit.la

libit_la_SOURCES =    \
	arithmetic_codec.c     \
	channel.c     \
	convcode.c    \
	cplx.c        \
	distance.c    \
	fastica.c     \
	fourier.c     \
	filter.c      \
	hmmalgo.c     \
	io.c          \
	linalg.c      \
	mat.c         \
	math.c	      \
	parser.c      \
	poly.c        \
	quantizer.c   \
	random.c      \
	source.c      \
	source_fit.c  \
	source_func.c \
	vec.c         \
	vlc.c         \
	wavelet.c     \
	separable2D.c \
	wavelet2D.c

libit_la_LDFLAGS = \
        -release $(LT_RELEASE) \
        -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE)
