##
## Process this file with automake to produce Makefile.in
##

# The directory where the include files will be installed
libitincludedir = $(includedir)/it

# Which header files to install
libitinclude_HEADERS = \
	arithmetic_codec.h      \
	channel.h      \
	convcode.h     \
	cplx.h         \
	distance.h     \
	fastica.h      \
	filter.h       \
	fourier.h      \
	hlist.h        \
	hmmalgo.h      \
	interleaver.h  \
	io.h           \
	linalg.h       \
	mat.h          \
	math.h 	       \
	parser.h       \
	poly.h         \
	quantizer.h    \
	random.h       \
	source.h       \
	source_fit.h   \
	source_func.h  \
	transform.h    \
	transform2D.h  \
	separable2D.h  \
	types.h        \
	vec.h          \
	vlc.h          \
	wavelet.h      \
	wavelet2D.h
